--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
 </head>
 <body>
+  <p>Test chat page</p>
   <script>
     (function(d,t) {
       var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
