--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
           domain: 'https://test.ca.one-stop-talk.stg.gcp.trchq.com',
           ws:  'wss://test.ca.one-stop-talk.stg.gcp.trchq.com/cable',
           app_id: "D2p3uNwqDtu7pknnG5WAZB6Q",
-          data: "YOUR_ENCRYPTED_JWE_DATA",
+          data:  {
+                email: "ilya.maximenko@thinkresearch.com",
+                identifier_key: "77dc64f20711f0697eb12222e678e929dbf493118b5ce44e2b0d5e9ae34cf1b9",
+                properties: { }
+              },
           lang: "USER_LANG_OR_DEFAULTS_TO_BROWSER_LANG" 
         })
       }
