--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
             new window.VirtualCareMessengerEncrypted({
               domain: 'https://test.ca.one-stop-talk.stg.gcp.trchq.com',
               ws:  'wss://test.ca.one-stop-talk.stg.gcp.trchq.com/cable',
-              app_id: "D2p3uNwqDtu7pknnG5WAZB6Q",
-              data: "YOUR_ENCRYPTED_JWE_DATA",
-              lang: "USER_LANG_OR_DEFAULTS_TO_BROWSER_LANG" 
+              app_id: "D2p3uNwqDtu7pknnG5WAZB6Q"
             })
           }
         })(document,"script");
