--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
       <script>
         (function(d,t) {
           var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-          g.src="https://app.chaskiq.io/embed.js"
+          g.src="https://test.ca.one-stop-talk.stg.gcp.trchq.com/embed.js"
           s.parentNode.insertBefore(g,s);
           g.onload=function(){
-            new window.ChaskiqMessengerEncrypted({
-              domain: 'https://app.chaskiq.io',
-              ws:  'wss://app.chaskiq.io/cable',
-              app_id: "QvLxW3HkfhCcAMQCpya4AsQR",
+            new window.VirtualCareMessengerEncrypted({
+              domain: 'https://test.ca.one-stop-talk.stg.gcp.trchq.com',
+              ws:  'wss://test.ca.one-stop-talk.stg.gcp.trchq.com/cable',
+              app_id: "D2p3uNwqDtu7pknnG5WAZB6Q",
             })
           }
         })(document,"script");
