--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
       <script>
         (function(d,t) {
           var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-          g.src="https://test.ca.one-stop-talk.stg.gcp.trchq.com/embed.js"
+          g.src="https://test.ca.one-stop-talk.dev.gcp.trchq.com/embed.js"
           s.parentNode.insertBefore(g,s);
           g.onload=function(){
             new window.VirtualCareMessengerEncrypted({
-              domain: 'https://test.ca.one-stop-talk.stg.gcp.trchq.com',
-              ws:  'wss://test.ca.one-stop-talk.stg.gcp.trchq.com/cable',
-              app_id: "D2p3uNwqDtu7pknnG5WAZB6Q",
+              domain: 'https://test.ca.one-stop-talk.dev.gcp.trchq.com',
+              ws:  'wss://test.ca.one-stop-talk.dev.gcp.trchq.com/cable',
+              app_id: "XhaeaVJPLz73QUMP5LzFrTt9" 
             })
           }
         })(document,"script");
