--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
             new window.VirtualCareMessengerEncrypted({
               domain: 'https://test.ca.one-stop-talk.dev.gcp.trchq.com',
               ws:  'wss://test.ca.one-stop-talk.dev.gcp.trchq.com/cable',
-              app_id: "XhaeaVJPLz73QUMP5LzFrTt9" 
+              app_id: "9rk2t9xBsvRSoFy1TsRFPPrm",
+              data: "YOUR_ENCRYPTED_JWE_DATA",
+              lang: "USER_LANG_OR_DEFAULTS_TO_BROWSER_LANG" 
             })
           }
         })(document,"script");
