--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <head>
 </head>
 <body>
-  <p>Test chat page</p>
-      <script>
+  <h1>Test chat page</h1>
+   <script>
         (function(d,t) {
           var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
           g.src="https://test.ca.one-stop-talk.stg.gcp.trchq.com/embed.js"
