--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 </head>
 <body>
   <h1>Test chat page</h1>
-   <script>
+      <script>
         (function(d,t) {
           var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
           g.src="https://test.ca.one-stop-talk.stg.gcp.trchq.com/embed.js"
@@ -11,7 +11,9 @@
             new window.VirtualCareMessengerEncrypted({
               domain: 'https://test.ca.one-stop-talk.stg.gcp.trchq.com',
               ws:  'wss://test.ca.one-stop-talk.stg.gcp.trchq.com/cable',
-              app_id: "D2p3uNwqDtu7pknnG5WAZB6Q"
+              app_id: "D2p3uNwqDtu7pknnG5WAZB6Q",
+              data: "YOUR_ENCRYPTED_JWE_DATA",
+              lang: "USER_LANG_OR_DEFAULTS_TO_BROWSER_LANG" 
             })
           }
         })(document,"script");
