--- a/index.html
+++ b/index.html
@@ -2,18 +2,19 @@
 </head>
 <body>
   <h1>Test chat page</h1>
-      <script>
+     <script>
         (function(d,t) {
           var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-          g.src="https://test.ca.one-stop-talk.dev.gcp.trchq.com/embed.js"
+          g.src="https://test.ca.one-stop-talk.stg.gcp.trchq.com/embed.js"
           s.parentNode.insertBefore(g,s);
           g.onload=function(){
             new window.VirtualCareMessengerEncrypted({
-              domain: 'https://test.ca.one-stop-talk.dev.gcp.trchq.com',
-              ws:  'wss://test.ca.one-stop-talk.dev.gcp.trchq.com/cable',
-              app_id: "9rk2t9xBsvRSoFy1TsRFPPrm"
+              domain: 'https://test.ca.one-stop-talk.stg.gcp.trchq.com',
+              ws:  'wss://test.ca.one-stop-talk.stg.gcp.trchq.com/cable',
+              app_id: "D2p3uNwqDtu7pknnG5WAZB6Q",
+              lang: "fr" 
             })
           }
         })(document,"script");
-      </script>
+      </script
 </body>
