--- a/index.html
+++ b/index.html
@@ -1,20 +1,26 @@
+<!doctype html>
+<html lang="en">    
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Chat test page</title>
 </head>
-<body>
-  <h1>Test chat page</h1>
-      <script>
-        (function(d,t) {
-          var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-          g.src="https://test.ca.one-stop-talk.sbx.gcp.trchq.com/embed.js"
-          s.parentNode.insertBefore(g,s);
-          g.onload=function(){
-            new window.VirtualCareMessengerEncrypted({
-              domain: 'https://test.ca.one-stop-talk.sbx.gcp.trchq.com',
-              ws:  'wss://test.ca.one-stop-talk.sbx.gcp.trchq.com/cable',
-              app_id: "XnA6d2mEejaov78UETAzM5uj",
-              lang: "en" 
-            })
-          }
-        })(document,"script");
-      </script>
-</body>
+  <body>
+    <h1>Test chat page</h1>
+        <script>
+          (function(d,t) {
+            var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+            g.src="https://test.ca.one-stop-talk.sbx.gcp.trchq.com/embed.js"
+            s.parentNode.insertBefore(g,s);
+            g.onload=function(){
+              new window.VirtualCareMessengerEncrypted({
+                domain: 'https://test.ca.one-stop-talk.sbx.gcp.trchq.com',
+                ws:  'wss://test.ca.one-stop-talk.sbx.gcp.trchq.com/cable',
+                app_id: "XnA6d2mEejaov78UETAzM5uj",
+                lang: "en" 
+              })
+            }
+          })(document,"script");
+        </script>
+  </body>
+</html>
