--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
       <script>
         (function(d,t) {
           var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-          g.src="https://test.ca.one-stop-talk.sbx.gcp.trchq.com/embed.js"
+          g.src="https://test.ca.digital-front-door.stg.gcp.trchq.com/embed.js"
           s.parentNode.insertBefore(g,s);
           g.onload=function(){
             new window.VirtualCareMessengerEncrypted({
-              domain: 'https://test.ca.one-stop-talk.sbx.gcp.trchq.com',
-              ws:  'wss://test.ca.one-stop-talk.sbx.gcp.trchq.com/cable',
-              app_id: "XnA6d2mEejaov78UETAzM5uj",
+              domain: 'https://test.ca.digital-front-door.stg.gcp.trchq.com',
+              ws:  'wss://test.ca.digital-front-door.stg.gcp.trchq.com/cable',
+              app_id: "D2p3uNwqDtu7pknnG5WAZB6Q",
               lang: "en" 
             })
           }
