--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
               domain: 'https://test.ca.digital-front-door.stg.gcp.trchq.com',
               ws:  'wss://test.ca.digital-front-door.stg.gcp.trchq.com/cable',
               app_id: "D2p3uNwqDtu7pknnG5WAZB6Q",
-              lang: "en" 
+              lang: "en",
+              mode: "fullscreen"
             })
           }
         })(document,"script");
