--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
       <script>
         (function(d,t) {
           var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-          g.src="https://test.ca.digital-front-door.stg.gcp.trchq.com/embed.js"
+          g.src="https://api.dfd.thinkresearch.com/embed.js"
           s.parentNode.insertBefore(g,s);
           g.onload=function(){
             new window.VirtualCareMessengerEncrypted({
-              domain: 'https://test.ca.digital-front-door.stg.gcp.trchq.com',
-              ws:  'wss://test.ca.digital-front-door.stg.gcp.trchq.com/cable',
-              app_id: "D2p3uNwqDtu7pknnG5WAZB6Q",
-              lang: "en",
-              mode: "fullscreen"
+              domain: 'https://api.dfd.thinkresearch.com',
+              ws:  'wss://api.dfd.thinkresearch.com/cable',
+              app_id: "cGLP7wDvScTacMo9HNjDFKug",
+              mode: "fullscreen",
+              lang: "en" 
             })
           }
         })(document,"script");
