--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
       <script>
         (function(d,t) {
           var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-          g.src="https://api.dfd.thinkresearch.com/embed.js"
+          g.src="https://api.ca.dfd.thinkresearch.com/embed.js"
           s.parentNode.insertBefore(g,s);
           g.onload=function(){
             new window.VirtualCareMessengerEncrypted({
-              domain: 'https://api.dfd.thinkresearch.com',
-              ws:  'wss://api.dfd.thinkresearch.com/cable',
+              domain: 'https://api.ca.dfd.thinkresearch.com',
+              ws:  'wss://api.ca.dfd.thinkresearch.com/cable',
               app_id: "cGLP7wDvScTacMo9HNjDFKug",
               mode: "fullscreen",
               lang: "en" 
