--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <script>
        (function(d,t) {
             var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src="https://test.ca.one-stop-talk.sbx.gcp.trchq.com/embeds.js"
+            g.src="https://test.ca.one-stop-talk.sbx.gcp.trchq.com/asdfasdfas"
             s.parentNode.insertBefore(g,s);
             g.onload=function(){
               window.virtualCareMessenger = new window.VirtualCareMessengerEncrypted({
