--- a/index.html
+++ b/index.html
@@ -8,26 +8,22 @@
   <body>
     <h1>Test chat page</h1>
     <div id="messenger"></div>  
-    <script>
-       (function(d,t) {
-            var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-            g.src="https://test.ca.one-stop-talk.sbx.gcp.trchq.com/embed.js"
-            s.parentNode.insertBefore(g,s);
-            g.onload=function(){
-              window.virtualCareMessenger = new window.VirtualCareMessengerEncrypted({
-            domain: 'https://test.ca.one-stop-talk.sbx.gcp.trchq.com',
-            ws:  'wss://test.ca.one-stop-talk.sbx.gcp.trchq.com/cable',
-            app_id: "XnA6d2mEejaov78UETAzM5uj",
+      <script>
+        (function(d,t) {
+          var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+          g.src="https://test.ca.digital-front-door.stg.gcp.trchq.com/embed.js"
+          s.parentNode.insertBefore(g,s);
+          g.onload=function(){
+            new window.VirtualCareMessengerEncrypted({
+              domain: 'https://test.ca.digital-front-door.stg.gcp.trchq.com',
+              ws:  'wss://test.ca.digital-front-door.stg.gcp.trchq.com/cable',
+              app_id: "foyUwJtNHgQoE7ee1PewgY3d",
                 lang: "en",
-                mode: "fullscreen",
                 wrapperId: "messenger"
-              });
-            }
-            g.onerror = () => {
-              alert('Failed to load messenger')
-            }
-          })(document,"script");
-      </script>
+            })
+          }
+        })(document,"script");
+      </script>    
       <script id="messenger-error-handler">
         (function () {
           function check(limit) {
@@ -53,7 +49,6 @@
           }
 
           check(1000 * 5).then(() => {
-            alert('loaded');
           }).catch(() => {
             alert('failed');
           });
