--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
 </head>
   <body>
     <h1>Test chat page</h1>
+    <div id="ns-messenger"></div>
+      <script>
+        (function(d,t) {
+          var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
+          g.src="https://nshealth.ca.dfd.thinkresearch.com/embed.js"
+          s.parentNode.insertBefore(g,s);
+          g.onload=function(){
+            new window.VirtualCareMessengerEncrypted({
+              domain: 'https://nshealth.ca.dfd.thinkresearch.com',
+              ws:  'wss://nshealth.ca.dfd.thinkresearch.com/cable',
+              app_id: "cGLP7wDvScTacMo9HNjDFKug",
+                lang: "en",
+                wrapperId: "ns-messenger"
+            })
+          }
+        })(document,"script");
+      </script>
     <div id="messenger"></div>  
       <script>
         (function(d,t) {
