--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport'>
+  <meta content='width=device-width, initial-scale=1, maximum-scale=1' media='(device-height: 568px)' name='viewport'>
   <title>Chat test page</title>
 </head>
   <body>
     <h1>Test chat page</h1>
-    <div id="ns-messenger"></div>
     <div id="messenger"></div>  
       <script>
         (function(d,t) {
