--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
       <script>
         (function(d,t) {
           var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-          g.src="https://test.ca.digital-front-door.stg.gcp.trchq.com/embed.js"
+          g.src="https://nshealth.ca.dfd.thinkresearch.com/embed.js"
           s.parentNode.insertBefore(g,s);
           g.onload=function(){
             new window.VirtualCareMessengerEncrypted({
-              domain: 'https://test.ca.digital-front-door.stg.gcp.trchq.com',
-              ws:  'wss://test.ca.digital-front-door.stg.gcp.trchq.com/cable',
-              app_id: "foyUwJtNHgQoE7ee1PewgY3d",
-                lang: "en",
-                wrapperId: "messenger"
+              domain: 'https://nshealth.ca.dfd.thinkresearch.com',
+              ws:  'wss://nshealth.ca.dfd.thinkresearch.com/cable',
+              app_id: "cGLP7wDvScTacMo9HNjDFKug",
+                lang: "en"
             })
           }
         })(document,"script");
