--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
               domain: 'https://test.ca.digital-front-door.stg.gcp.trchq.com',
               ws:  'wss://test.ca.digital-front-door.stg.gcp.trchq.com/cable',
               app_id: "foyUwJtNHgQoE7ee1PewgY3d",
-              lang: "fr" 
+              lang: "en" 
             })
           }
         })(document,"script");
