--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             new window.VirtualCareMessengerEncrypted({
               domain: 'https://test.ca.digital-front-door.stg.gcp.trchq.com',
               ws:  'wss://test.ca.digital-front-door.stg.gcp.trchq.com/cable',
-              app_id: "foyUwJtNHgQoE7ee1PewgY3d",
-              lang: "fr" 
+              app_id: "D2p3uNwqDtu7pknnG5WAZB6Q",
+              lang: "en" 
             })
           }
         })(document,"script");
-      </script
+      </script>
   </body>
 </html>
