--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
               domain: 'https://test.ca.one-stop-talk.sbx.gcp.trchq.com',
               ws:  'wss://test.ca.one-stop-talk.sbx.gcp.trchq.com/cable',
               app_id: "A65a4LPG6rXHg7rz7EdBjxNg",
-              data: "YOUR_ENCRYPTED_JWE_DATA",
-              lang: "USER_LANG_OR_DEFAULTS_TO_BROWSER_LANG" 
+              lang: "en" 
             })
           }
         })(document,"script");
