--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
             new window.VirtualCareMessengerEncrypted({
               domain: 'https://test.ca.digital-front-door.stg.gcp.trchq.com',
               ws:  'wss://test.ca.digital-front-door.stg.gcp.trchq.com/cable',
-              app_id: "D2p3uNwqDtu7pknnG5WAZB6Q",
-              lang: "fr" 
+              app_id: "D2p3uNwqDtu7pknnG5WAZB6Q"
             })
           }
         })(document,"script");
