--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             new window.VirtualCareMessengerEncrypted({
               domain: 'https://test.ca.digital-front-door.stg.gcp.trchq.com',
               ws:  'wss://test.ca.digital-front-door.stg.gcp.trchq.com/cable',
+              lang: 'en',
               app_id: "D2p3uNwqDtu7pknnG5WAZB6Q"
             })
           }
