--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             new window.VirtualCareMessengerEncrypted({
               domain: 'https://test.ca.digital-front-door.stg.gcp.trchq.com',
               ws:  'wss://test.ca.digital-front-door.stg.gcp.trchq.com/cable',
-              lang: 'en',
-              app_id: "D2p3uNwqDtu7pknnG5WAZB6Q"
+              app_id: "AUrsYRHKqdrg1WDtX37oUxKi",
+              lang: "en" 
             })
           }
         })(document,"script");
