--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       <script>
         (function(d,t) {
           var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-          g.src="https://test.ca.digital-front-door.stg.gcp.trchq.com/embed.js"
+          g.src="https://test.ca.digital-front-door.dev.gcp.trchq.com/embed.js"
           s.parentNode.insertBefore(g,s);
           g.onload=function(){
             new window.VirtualCareMessengerEncrypted({
-              domain: 'https://test.ca.digital-front-door.stg.gcp.trchq.com',
-              ws:  'wss://test.ca.digital-front-door.stg.gcp.trchq.com/cable',
-              lang: 'en',
-              app_id: "D2p3uNwqDtu7pknnG5WAZB6Q"
+              domain: 'https://test.ca.digital-front-door.dev.gcp.trchq.com',
+              ws:  'wss://test.ca.digital-front-door.dev.gcp.trchq.com/cable',
+              app_id: "NKubX8qcG34kVPYPNEabB5A5",
+              lang: "en" 
             })
           }
         })(document,"script");
