--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   <div id="my-messenger"></div>
   <button id="toggle-button">Open</button>
 </div>
-
+<div>
 // Define the parameters as variables
 var documentElement = document;
 var scriptTag = "script";
@@ -75,6 +75,6 @@ documentElement.documentElement.setAttribute('data-mode', mode);
     });
   }
 })(documentElement, scriptTag, scriptSrc, domain, wsUrl, language, appId, mode);
-
+</div>
   </body>
 </html>
