--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ var domain = "https://test.ca.digital-front-door.dev.gcp.trchq.com";
 var wsUrl = 'wss://test.ca.digital-front-door.dev.gcp.trchq.com';
 var language = "en";
 var appId = "NKubX8qcG34kVPYPNEabB5A5";
-var mode = 'fullscreen';
+var mode = 'default';
 
 // Set the variables in the document (e.g., using data attributes or a custom script tag)
 documentElement.documentElement.setAttribute('data-script-src', scriptSrc);
