--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ var documentElement = document;
 var scriptTag = "script";
 var scriptSrc = "https://test.ca.digital-front-door.dev.gcp.trchq.com/embed.js";
 var domain = "https://test.ca.digital-front-door.dev.gcp.trchq.com";
-var wsUrl = 'wss://test.ca.digital-front-door.dev.gcp.trchq.com';
+var wsUrl = 'wss://test.ca.digital-front-door.dev.gcp.trchq.com/cable';
 var language = "en";
 var appId = "NKubX8qcG34kVPYPNEabB5A5";
 var mode = 'default';
