--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@ documentElement.documentElement.setAttribute('data-mode', mode);
       ws:  ws,
       lang: lang,
       app_id: app,
-      mode: mod
+      mode: mod,
+      wrapperId: "my-messenger",
+      hideToggleButton: true,
+      containerClassName: "my-container",
+      messengerClassName: "my-messenger",
     });
 
     document.getElementById("toggle-button").addEventListener("click", function(e) {
