--- a/index.html
+++ b/index.html
@@ -36,39 +36,30 @@
   <div id="my-messenger"></div>
   <button id="toggle-button">Open</button>
 </div>
-<script>
-  
-// Define the parameters as variables
-var scriptSrc = "https://test.ca.digital-front-door.dev.gcp.trchq.com/embed.js";
-var domain = "https://test.ca.digital-front-door.dev.gcp.trchq.com";
-var wsUrl = 'wss://test.ca.digital-front-door.dev.gcp.trchq.com/cable';
-var language = "en";
-var appId = "NKubX8qcG34kVPYPNEabB5A5";
-var mode = 'default';
+  <script>
+    (function (d, t) {
+      var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
+      g.src = "https://test.ca.digital-front-door.dev.gcp.trchq.com/embed.js";
+      s.parentNode.insertBefore(g, s);
+      g.onload = function () {
+        window.virtualCareMessenger = new window.VirtualCareMessengerEncrypted({
+          domain: "https://test.ca.digital-front-door.dev.gcp.trchq.com",
+          ws: 'wss://test.ca.digital-front-door.dev.gcp.trchq.com/cable',
+          lang: "en",
+          app_id: "NKubX8qcG34kVPYPNEabB5A5",
+          mode: "default",
+          wrapperId: "my-messenger",
+          hideToggleButton: true,
+          containerClassName: "my-container",
+          messengerClassName: "my-messenger",
+        });
 
-(function(d,t,src,dom,ws,lang,app,mod) {
-  var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-  g.src=src;
-  s.parentNode.insertBefore(g,s);
-  g.onload=function(){
-    window.virtualCareMessenger = new window.VirtualCareMessengerEncrypted({
-      domain: dom,
-      ws:  ws,
-      lang: language,
-      app_id: app,
-      mode: mod,
-      wrapperId: "my-messenger",
-      hideToggleButton: true,
-      containerClassName: "my-container",
-      messengerClassName: "my-messenger",
-    });
-
-    document.getElementById("toggle-button").addEventListener("click", function(e) {
-      virtualCareMessenger.toggleMessenger();
-      e.srcElement.innerText = virtualCareMessenger.isOpen ? "Close" : "Open";
-    });
-  }
-})(document, "script", scriptSrc, domain, wsUrl, language, appId, mode);
-</script>
+        document.getElementById("toggle-button").addEventListener("click", function (e) {
+          virtualCareMessenger.toggleMessenger();
+          e.srcElement.innerText = virtualCareMessenger.isOpen ? "Close" : "Open";
+        });
+      }
+    })(document, "script");
+  </script>
 </body>
 </html>
