--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
   <script>
     (function (d, t) {
       var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
-      g.src = "https://test.ca.digital-front-door.dev.gcp.trchq.com/embed.js";
+      g.src = "https://test.ca.digital-front-door.sbx.gcp.trchq.com/embed.js";
       s.parentNode.insertBefore(g, s);
       g.onload = function () {
         window.virtualCareMessenger = new window.VirtualCareMessengerEncrypted({
-          domain: "https://test.ca.digital-front-door.dev.gcp.trchq.com",
-          ws: 'wss://test.ca.digital-front-door.dev.gcp.trchq.com/cable',
+          domain: "https://test.ca.digital-front-door.sbx.gcp.trchq.com",
+          ws: 'wss://test.ca.digital-front-door.sbx.gcp.trchq.com/cable',
           lang: "en",
-          app_id: "NKubX8qcG34kVPYPNEabB5A5",
+          app_id: "XnA6d2mEejaov78UETAzM5uj",
           mode: "default",
           wrapperId: "my-messenger",
           hideToggleButton: true,
