--- a/index.html
+++ b/index.html
@@ -1,68 +1,79 @@
-<!doctype html>
-<html lang="en">    
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta content='width=device-width, initial-scale=1, maximum-scale=1' name='viewport'>
-  <meta content='width=device-width, initial-scale=1, maximum-scale=1' media='(device-height: 568px)' name='viewport'>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <title>Chat test page</title>
-</head>
-  <body>
-    <h1>Test chat page</h1>
-<style>
-  .my-messenger {
-    position: unset;
-    height: 704px
-  }
-  .my-container {
-    position: unset;
-    width: unset;
-  }
-  #toggle-button {
-    margin-top: 20px;
-    padding: 10px;
-    background: red;
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    border: 1px solid;
-  }
-  #messenger-container {
-    position: fixed;
-    bottom: 20px;
-    left: 20px;
-  }
-</style>
-<div id="messenger-container">
-  <div id="my-messenger"></div>
-  <button id="toggle-button">Open</button>
-</div>
-  <script>
-    (function (d, t) {
-      var g = d.createElement(t), s = d.getElementsByTagName(t)[0];
-      g.src = "https://test.ca.digital-front-door.sbx.gcp.trchq.com/embed.js";
-      s.parentNode.insertBefore(g, s);
-      g.onload = function () {
-        window.virtualCareMessenger = new window.VirtualCareMessengerEncrypted({
-          domain: "https://test.ca.digital-front-door.sbx.gcp.trchq.com",
-          ws: 'wss://test.ca.digital-front-door.sbx.gcp.trchq.com/cable',
-          lang: "en",
-          app_id: "XnA6d2mEejaov78UETAzM5uj",
-          mode: "default",
-          wrapperId: "my-messenger",
-          hideToggleButton: true,
-          containerClassName: "my-container",
-          messengerClassName: "my-messenger",
-        });
+<html>
 
-        document.getElementById("toggle-button").addEventListener("click", function (e) {
-          virtualCareMessenger.toggleMessenger();
-          e.srcElement.innerText = virtualCareMessenger.isOpen ? "Close" : "Open";
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+
+<body>
+    <div>
+
+        <div class="mb-3">
+            <label for="host" class="form-label">Host</label>
+            <input type="text" class="form-control" id="host">
+        </div>
+
+        <div class="mb-3">
+            <label for="app_key" class="form-label">App Key</label>
+            <input type="text" class="form-control" id="app_key">
+        </div>
+
+        <div class="mb-3">
+            <label for="email" class="form-label">Identifier Key</label>
+            <input type="text" class="form-control" id="identifier_key">
+        </div>
+
+        <div class="mb-3">
+            <label for="email" class="form-label">Email address</label>
+            <input type="email" class="form-control" id="email">
+        </div>
+        <div class="mb-3">
+            <label for="first_name" class="form-label">First Name</label>
+            <input type="text" class="form-control" id="first_name">
+        </div>
+        <div class="mb-3">
+            <label for="last_name" class="form-label">Last Name</label>
+            <input type="text" class="form-control" id="last_name">
+        </div>
+
+
+        <button type="submit" id="start" class="btn btn-primary">Submit</button>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+    <script>
+
+        var btn = document.getElementById("start");
+        btn.addEventListener('click', function () {
+            var host = document.getElementById("host").value;
+            var app_key = document.getElementById("app_key").value;
+            var identifier_key = document.getElementById("identifier_key").value;
+            var first_name = document.getElementById("first_name").value;
+            var last_name = document.getElementById("last_name").value;
+
+            var data = {
+                identifier_key: identifier_key,
+                first_name: first_name,
+                last_name: last_name
+            };
+
+            var g = document.createElement('script'), s = document.getElementsByTagName('script')[0];
+            g.src = "https://" + host + "/embed.js";
+            s.parentNode.insertBefore(g, s);
+            g.onload = function () {
+                window.virtualCareMessenger = new window.VirtualCareMessengerEncrypted({
+                    domain: host,
+                    ws: "wss://" + host + "/embed.js",
+                    data: data,
+                    lang: document.documentElement.lang,
+                    app_id: app_key,
+                    mode: "default",
+                })
+            };
         });
-      }
-    })(document, "script");
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    </script>
 </body>
+
 </html>
