--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <div>
+    <div class="container mt-4 w-75">
 
         <div class="mb-3">
             <label for="host" class="form-label">Host</label>
