--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
         <div class="mb-3">
             <label for="host" class="form-label">Host</label>
-            <input type="text" class="form-control" id="host">
+            <input type="text" class="form-control" id="host" value="test.ca.digital-front-door.dev.gcp.trchq.com">
         </div>
 
         <div class="mb-3">
             <label for="app_key" class="form-label">App Key</label>
-            <input type="text" class="form-control" id="app_key">
+            <input type="text" class="form-control" id="app_key" value="NKubX8qcG34kVPYPNEabB5A5">
         </div>
 
         <div class="mb-3">
