--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         </div>
 
         <div class="mb-3">
+            <label for="language" class="form-label">Language</label>
+            <input type="text" class="form-control" id="language" value="en">
+        </div>     
+
+        <div class="mb-3">
             <label for="email" class="form-label">Identifier Key</label>
             <input type="text" class="form-control" id="identifier_key">
         </div>
@@ -57,6 +62,7 @@
             var identifier_key = document.getElementById("identifier_key").value;
             var first_name = document.getElementById("first_name").value;
             var last_name = document.getElementById("last_name").value;
+            var language = document.getElementById("language").value;
 
             var data = {
                 email: email,
@@ -75,7 +81,7 @@
                     domain: "https://" + host,
                     ws: "wss://" + host + "/cable",
                     data: data,
-                    lang: document.documentElement.lang,
+                    lang: language,
                     app_id: app_key,
                     mode: "default",
                 })
