Add mode selection dropdown to index.html

--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
             <label for="mode" class="form-label">Mode</label>
             <input type="text" class="form-control" id="mode", value="default">
         </div>
+     
+      <select class="form-select" aria-label="mode">
+        <option selected>default</option>
+        <option value="default">Default</option>
+        <option value="embedded">Embedded</option>
+      </select>
 
      <div id="parent_container">(Messenger will be put in here)</div>
 
