--- a/index.html
+++ b/index.html
@@ -47,16 +47,19 @@
 
         <div class="mb-3">
             <label for="mode" class="form-label">Mode</label>
-            <input type="text" class="form-control" id="mode", value="default">
+            <input type="text" class="form-control" id="mode" value="default">
         </div>
      
-      <select class="form-select" aria-label="mode">
-        <option selected>default</option>
-        <option value="default">Default</option>
-        <option value="embedded">Embedded</option>
-      </select>
-
-     <div id="parent_container">(Messenger will be put in here)</div>
+       <div class="mb-3">
+        <label for="mode" for="mode" class="form-label">Mode</label>
+        <select class="form-select" id="mode">
+          <option selected>default</option>
+          <option value="default">Default</option>
+          <option value="embedded">Embedded</option>
+        </select>
+       </div>
+   
+     <div id="parent_container"></div>
 
         <button type="submit" id="start" class="btn btn-primary">Start</button>
     </div>
