Change selected option in mode dropdown to 'embedded'

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="mb-3">
                     <label for="mode" class="form-label">Mode</label>
                     <select class="form-select" id="mode">
-                        <option selected>default</option>
+                        <option selected>embedded</option>
                         <option value="default">Default</option>
                         <option value="embedded">Embedded</option>
                     </select>
